--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
 
             <div class="home-sci">
-              <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+              <!-- <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram-alt'></i></a> -->
               <a href="https://www.linkedin.com/in/nandkumarsahu1234/" target="_blank"><i
                   class='bx bxl-linkedin-square'></i></a>
               <a href="https://github.com/nandkumar1000" target="_blank"><i class='bx bxl-github'></i></a>
@@ -600,8 +600,9 @@
                 <i class="fa-solid fa-paintbrush"></i>
               </div>
               <div class="card__content">
-                <h3>Designing</h3>
-                <p>I am proficient in design tools like Canva, Figma, and more to create visually compelling designs.
+                <h3>Web Designer</h3>
+                <p>I'm a fresh web designer, passionate about creating innovative designs and exploring new ideas in a
+                  dynamic digital world.
                 </p>
                 <a href="#">Read More</a>
               </div>
