--- a/index.html
+++ b/index.html
@@ -65,73 +65,75 @@
   <div class="everything">
     <!-- ========= HEADER ==========  -->
     <section class="landing-page">
-      <header class="l-header" id="header">
-        <nav class="nav bd-container">
-          <a href="#" class="nav__logo">Nand</a>
+      <div class="landing-content">
+        <header class="l-header" id="header">
+          <nav class="nav bd-container">
+            <a href="#" class="nav__logo">Nand</a>
 
-          <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#" class="nav__link" id="ab">About</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link" id="sk">Skills</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link" id="see">Services</a>
-              </li>
-              <li class="nav__item">
-                <a href="#project" class="nav__link" id="pproj">Projects</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" id="co" class="nav__link">Contact</a>
-              </li>
-            </ul>
+            <div class="nav__menu" id="nav-menu">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link" id="ab">About</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link" id="sk">Skills</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link" id="see">Services</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#project" class="nav__link" id="pproj">Projects</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" id="co" class="nav__link">Contact</a>
+                </li>
+              </ul>
 
-            <div class="__dark-mode">
-              <i class='bx bx-moon bx-sun' id="theme-button"></i>
+              <div class="__dark-mode">
+                <i class='bx bx-moon bx-sun' id="theme-button"></i>
+              </div>
+
             </div>
 
-          </div>
-
-          <div class="nav__toggle" id="nav-toggle">
-            <i class="bx bx-grid-alt"></i>
-          </div>
-        </nav>
-      </header>
-
-      <!-- ========= SECTION ======== -->
-
-      <main class="container">
-        <div class="content">
-          <div class="text">
-            <h1>
-              Hey, I'm a <br />
-              Full Stack <span id="element"></span> <br />
-              & UI/UX Enthusiast
-            </h1>
-            <p>
-              I'm Nand, a passionate Full Stack Web Developer and tech enthusiast.<br />
-              I turn ideas into high-performance, user-focused digital solutions that drive brand success.
-            </p>
-            <!-- contact with me -->
-            <div class="btn-box">
-              <a class="btn hire-btn" href="#">Hire Me</a>
+            <div class="nav__toggle" id="nav-toggle">
+              <i class="bx bx-grid-alt"></i>
             </div>
+          </nav>
+        </header>
 
-            <div class="home-sci">
-              <a href="https://www.linkedin.com/in/nandkumarsahu1234/" target="_blank"><i
-                  class='bx bxl-linkedin-square'></i></a>
-              <a href="https://github.com/nandkumar1000" target="_blank"><i class='bx bxl-github'></i></a>
+        <!-- ========= SECTION ======== -->
+
+        <main class="container">
+          <div class="content">
+            <div class="text">
+              <h1>
+                Hey, I'm a <br />
+                Full Stack <span id="element"></span> <br />
+                & UI/UX Enthusiast
+              </h1>
+              <p>
+                I'm Nand, a passionate Full Stack Web Developer and tech enthusiast.<br />
+                I turn ideas into high-performance, user-focused digital solutions that drive brand success.
+              </p>
+              <!-- contact with me -->
+              <div class="btn-box">
+                <a class="btn hire-btn" href="#">Hire Me</a>
+              </div>
+
+              <div class="home-sci">
+                <a href="https://www.linkedin.com/in/nandkumarsahu1234/" target="_blank"><i
+                    class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/nandkumar1000" target="_blank"><i class='bx bxl-github'></i></a>
+              </div>
+            </div>
+            <div class="person">
+              <div class="__BG">
+                <img src="./image/nks.jpg" alt="person-image" loading="lazy">
+              </div>
             </div>
           </div>
-          <div class="person">
-            <div class="__BG">
-              <img src="./image/nks.jpg" alt="person-image" loading="lazy">
-            </div>
-          </div>
-        </div>
-      </main>
+        </main>
+      </div>
     </section>
 
     <!-- about section -->
