--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
             <h1>Redux</h1>
           </div>
           <div class="skill node">
-            <img src="/image/node.png" alt="Node JS" loading="lazy">
+            <a href="https://github.com/nandkumar1000/Node-Js"> <img src="/image/node.png" alt="Node JS"
+                loading="lazy"></a>
             <h1>Node JS</h1>
           </div>
           <div class="skill express">
@@ -263,7 +264,9 @@
             <h1>Express JS</h1>
           </div>
           <div class="skill mongodb">
-            <img src="/image/mongodb.svg" alt="MongoDB" loading="lazy">
+            <a href="https://github.com/nandkumar1000/Mongo-Db"> <img src="/image/mongodb.svg" alt="MongoDB"
+                loading="lazy">
+            </a>
             <h1>MongoDB</h1>
           </div>
           <div class="skill mysql">
