--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
               </p>
               <!-- contact with me -->
               <div class="btn-box">
-                <a class="btn hire-btn" href="#">Hire Me</a>
+                <a class="btn hire-btn"
+                  href="https://drive.google.com/file/d/1XXodEFeyIMeqBz1M1dz3KvyIINA4mJOc/view?usp=sharing">Hire Me</a>
               </div>
 
               <div class="home-sci">
