--- a/index.html
+++ b/index.html
@@ -762,6 +762,13 @@
           <a href="#contact" class="btn">Get In Touch</a>
         </div>
       </div>
+      <p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14215.917355657128!2d75.8779743078125!3d27.03081880000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396daff75daffa4d%3A0x3b7007c44ebf96df!2sArya%20Main%20Campus!5e0!3m2!1sen!2sin!4v1731925368936!5m2!1sen!2sin"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </p>
       <div class="footer-bottom">
         <p>&copy; 2024 Nand Kumar Sahu. All Rights Reserved.</p>
         <a href="#" class="back-to-top">Back to Top ↑</a>
