--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
         </div>
       </div>
       <div class="vertical-line">
-        <a href="https://niteshzzzzz.github.io/Quiz-app/" class="first-circle l1"></a>
-        <a href="https://glistening-duckanoo-76178d.netlify.app/" class="first-circle l2"></a>
+        <a href="https://github.com/nandkumar1000/BookMyStay" class="first-circle l1"></a>
+        <a href="https://github.com/nandkumar1000/C-A-K-K-HAVEN" class="first-circle l2"></a>
         <a href="https://nandkumar1000.github.io/Forecastify/" class="first-circle l3"></a>
         <a href="https://nandkumar1000.github.io/Currency_Converter/" class="first-circle l4"></a>
         <a href="https://nandkumar1000.github.io/AI-Chatbot/" class="first-circle l5"></a>
