--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                 <p>I'm a fresh web designer, passionate about creating innovative designs and exploring new ideas in a
                   dynamic digital world.
                 </p>
-                <a href="#">Read More</a>
+                <a href="https://photos.app.goo.gl/2ya9pGXJoaBd5zrq9">View More</a>
               </div>
             </div>
           </div>
